istio/old/mtls.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: development
spec:
  mtls:
    #mode: STRICT
    mode: DISABLE 

---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: cassandra
spec:
  mtls:
    #mode: STRICT
    mode: DISABLE 


---
apiVersion: "networking.istio.io/v1alpha3"
kind: DestinationRule
metadata:
  name: "istio-client-mtls"
  namespace: development
spec:
  host: "*.svc.cluster.local"
  trafficPolicy:
    tls:
      mode: DISABLE
        
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: istio-client-mtls
  namespace: default
spec:
  host: "kubernetes.default.svc.cluster.local"
  trafficPolicy:
    tls:
      mode: DISABLE

---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name:  cassandra-client-mtls
  namespace: cassandra
spec:
  host: cassandra.cassandra.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: PASSTHROUGH
