istio/old/proxy.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: https-gateway
  namespace: istio-system
  labels:
    app: istio-gateway
    tier: backend
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - arch.homework
    port:
      name: http
      number: 80
      protocol: HTTP
    tls:
      httpsRedirect: true
  - hosts:
    - arch.homework
    port:
      name: grpc-web-https
      number: 443
      protocol: HTTPS
    tls:
      credentialName: arch-homework-tsl
      httpsRedirect: false
      mode: SIMPLE
      privateKey: sds
      serverCertificate: sds

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: virtual-service
  namespace: istio-system
spec:
  hosts:
  - arch.homework
  gateways:
  - https-gateway
  http:
  - match:
    - uri:
        prefix: /api/v1/
    route:
    - destination:
        host: grpc-backend-service.development.svc.cluster.local
        port:
          number: 9000
    rewrite:
      uri: /
    corsPolicy:
      allowOrigin:
        - "*"
      allowMethods:
        - POST
        - GET
        - OPTIONS
        - PUT
        - DELETE
      allowHeaders:
        - grpc-timeout
        - content-type
        - keep-alive
        - user-agent
        - cache-control
        - content-type
        - content-transfer-encoding
        - custom-header-1
        - x-accept-content-transfer-encoding
        - x-accept-response-streaming
        - x-user-agent
        - x-grpc-web
      maxAge: 1728s
      exposeHeaders:
        - custom-header-1
        - grpc-status
        - grpc-message
      allowCredentials: true
  - match:
    - uri:
        prefix: /oauth2
    route:
    - destination:
        host: oauth2-proxy.oauth2.svc.cluster.local
        port:
          number: 80
  - route:
    - destination:
        host: react-service.development.svc.cluster.local
        port: 
          number: 3000
